[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klongpy"
version = "0.7.0"
description = "High-Performance Klong array language with rich Python integration."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Brian Guarraci" }
]
requires-python = ">=3.9,<3.15"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Interpreters",
]
keywords = ["klong", "array", "language", "interpreter", "numpy", "torch"]

dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
torch = ["torch"]
repl = ["colorama==0.4.6"]
web = ["aiohttp==3.9.4"]
db = ["pandas==3.0.0", "duckdb==1.4.4"]
ws = ["websockets==12.0"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.7"]
all = [
    "torch",
    "colorama==0.4.6",
    "aiohttp==3.9.4",
    "pandas==3.0.0",
    "duckdb==1.4.4",
    "websockets==12.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mkdocs>=1.6",
    "mkdocs-material>=9.7",
]

[project.urls]
Homepage = "http://klongpy.org"
Repository = "https://github.com/briangu/klongpy"
Documentation = "http://klongpy.org"

[project.scripts]
kgpy = "klongpy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["klongpy*"]

[tool.setuptools.package-data]
"klongpy" = ["lib/*.kg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    # Suppress PyTorch internal deprecation warnings that we can't control
    "ignore:`torch\\.jit\\.script_method` is deprecated:DeprecationWarning:torch.jit._script",
    # Suppress gradcheck float32 warning on MPS devices (float64 not supported)
    "ignore:Input #0 requires gradient and is not a double precision floating point:UserWarning",
]
